Добавил Файл Offsets.h который будет подключаться во всех файлах, а к нему в свою орчередь будут подключаться файлы с офсетами для конкретной версии Offsets155.h (к примеру). Выносить офсеты в файл не хочу, истетически не нравится.

--- a/AutoSwap.vcxproj
+++ b/AutoSwap.vcxproj
@@ -137,6 +137,8 @@
   <ItemGroup>
     <ClInclude Include="GlobalVariables.h" />
     <ClInclude Include="Injector.h" />
+    <ClInclude Include="Offsets.h" />
+    <ClInclude Include="Offsets155.h" />
     <ClInclude Include="PacketInjection.h" />
     <ClInclude Include="ProcessManager.h" />
     <ClInclude Include="MainForm.h">
