--- a/AutoSwap.vcxproj.filters
+++ b/AutoSwap.vcxproj.filters
@@ -44,5 +44,11 @@
     <ClInclude Include="PacketInjection.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="Offsets155.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Offsets.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
