--- a/AutoSwap.vcxproj.filters
+++ b/AutoSwap.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="PacketInjection.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="KeyboardHook.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MainForm.h">
@@ -48,6 +51,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="Offsets.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="KeyboardHook.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
