Добавил функцию свапа (чисто для теста). TODO: Дописать функцию свапа, и сделать из глабальных переменных, которые используются в разных потоках - атомарные.

--- a/AutoSwap.vcxproj
+++ b/AutoSwap.vcxproj
@@ -135,6 +135,7 @@
     <ClCompile Include="PacketInjection.cpp" />
     <ClCompile Include="ProcessManager.cpp" />
     <ClCompile Include="MainForm.cpp" />
+    <ClCompile Include="Swap.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GlobalVariables.h" />
