--- a/AutoSwap.vcxproj.filters
+++ b/AutoSwap.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="GlobalVariables.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Swap.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MainForm.h">
