--- a/src/AutoSwap.vcxproj.filters
+++ b/src/AutoSwap.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="SecondaryFunctions.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Assist.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MainForm.h">
@@ -66,6 +69,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="SecondaryFunctions.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Assist.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
